--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,16 +1,69 @@
 .icons {
   display: inline-block;
-  margin: '0 0 0 auto'
+  margin: "0 0 0 auto";
 }
 
 .center {
-  margin: 0 auto
+  margin: 0 auto;
 }
 
 .wrapper {
   display: flex;
 }
 
-.header{
-  margin:0 0 0 auto
+.header {
+  margin: 0 0 0 auto;
+}
+
+/* .grid_row {
+  display: flex;
+  flex-flow: row wrap;
+} */
+
+.book-card {
+  border: solid 1px #e0e0e0;
+  height: 256px;
+  width: 40%;
+  margin: 8px;
+  position: relative;
+}
+
+.book-card-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  text-align: center;
+}
+
+.book-card-delete {
+  color:red;
+  font-weight: bold;
+  position: absolute;
+  top:0;
+  right:0;
+  opacity: 0;
+}
+
+.book-card-delete:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.section-wrapper {
+  margin: 0 auto;
+  max-width: 575px;
+  padding: 0 1rem;
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+@media screen and (min-width: 576px) {
+  .section-wrapper {
+    max-width: 1024px;
+  }
+  .book-card {
+    width: 20%;
+    margin: 16px;
+  }
 }
